Added Interesting feature when Marker is clicked... heh
Also edited maps activity and changed some of the layout stuff.

Signed-off-by: TysonMoonie <tysonshane97@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".CurrentLocation"></activity>
+        <activity android:name=".LandmarkPopUpActivity" android:theme="@style/AppTheme.LandmarkTheme">
+        </activity>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
