--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".CurrentLocation"></activity>
+        
         <activity android:name=".LandmarkPopUpActivity" android:theme="@style/AppTheme.LandmarkTheme">
         </activity>
         <activity
@@ -57,6 +58,7 @@
             </intent-filter>
         </activity>
         <service android:name=".GetAddressIntentService" />
+        <activity android:name=".activity_adddata"></activity>
     </application>
 
 </manifest>
