--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,21 +43,36 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".CurrentLocation"></activity>
-        
-        <activity android:name=".LandmarkPopUpActivity" android:theme="@style/AppTheme.LandmarkTheme">
+        <activity
+            android:name=".CurrentLocation"
+            android:screenOrientation="portrait">
         </activity>
+        
+        <activity
+            android:name=".LandmarkPopUpActivity"
+            android:theme="@style/AppTheme.LandmarkTheme"
+            android:screenOrientation="portrait">
+        </activity>
+
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".LoginActivity">
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait"
+            />
+
+
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service android:name=".GetAddressIntentService" />
+
         <activity android:name=".activity_adddata"></activity>
     </application>
 
