--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <!--         The INTERNET/ACCESS_FINE_LOCATION permissions are required to get users current location. -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--
          The ACCESS_BACKGROUND_LOCATION permissions An app requires background location access
          if a feature within the app constantly shares location with other users or uses the Geofencing API.
