--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity
-            android:name=".CurrentLocation"
+            android:name=".VisitedLandmarksActivity"
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".LandmarkPopUpActivity"
