--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.wear:wear:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //add firestore
     implementation 'com.google.firebase:firebase-firestore:21.7.1'
+    compileOnly 'com.google.android.wearable:wearable:2.6.0'
 }
